# Skill-Gap-Analyzer

./: .env.example  .gitignore  .replit  README.md  pnpm-lock.yaml  pyproject.toml  render.yaml  replit.md
.agents/memory/: MEMORY.md  streamlit-python-setup.md
.devcontainer/: devcontainer.json
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts
artifacts/api-server/src/lib/: analysis-engine.ts  file-parser.ts  roadmap-generator.ts  skills-database.ts
artifacts/api-server/src/routes/: analyses.ts  dashboard.ts  index.ts  market.ts  resumes.ts
artifacts/skillgap-ai/: index.html  package.json
artifacts/skillgap-ai/.replit-artifact/: artifact.toml
artifacts/skillgap-ai/src/: App.tsx  index.css
artifacts/skillgap-ai/src/pages/: analyses.tsx  analysis-detail.tsx  (+7 more)
artifacts/skillgap-python/: README.md  app.py  requirements.txt
artifacts/skillgap-python/.streamlit/: config.toml
artifacts/skillgap-python/data/: __init__.py  skills_db.py
artifacts/skillgap-python/pages/: 1_Resume_Analyzer.py  2_JD_Analyzer.py  3_Skill_Gap_Analysis.py  4_Recommendations.py  5_Market_Insights.py  6_Source_Transparency.py
artifacts/skillgap-python/utils/: __init__.py  charts.py  gap_analyzer.py  market_data.py  recommender.py  resume_parser.py  skill_extractor.py
attached_assets/: Pasted-Build-a-production-ready-full-stack-web-application-cal_1781163687261.txt  Pasted-REBUILD-THIS-PROJECT-FROM-SCRATCH-AS-A-PRODUCTION-READY_1781249893204.txt  Pasted-You-are-a-Senior-Full-Stack-Python-Engineer-Analyze-the_1781164723361.txt
lib/api-spec/: openapi.yaml
(+3 files in other folders)
